Updates release notes for 2025-09-29 release

--- a/blog-changelog/2025-09-29-release-25-09.md
+++ b/blog-changelog/2025-09-29-release-25-09.md
@@ -133,10 +133,10 @@ Most of the features are linked to product specific issues. Please have a look o
 
 #### Added
 
-| Component                                                                                                   | Helm Chart (s) |                                          App-/KIT Version (s)                                          | Release Check                                                        |
-|:------------------------------------------------------------------------------------------------------------|:--------------:|:------------------------------------------------------------------------------------------------------:|----------------------------------------------------------------------|
+| Component                                                                                                   | Helm Chart (s) |                                          App-/KIT Version (s)                                          |                            Release Check                             |
+|:------------------------------------------------------------------------------------------------------------|:--------------:|:------------------------------------------------------------------------------------------------------:|:--------------------------------------------------------------------:|
 | [Data Trust & Security KIT](https://eclipse-tractusx.github.io/docs-kits/category/data-trust--security-kit) |      n/a       |  [0.0.1](https://eclipse-tractusx.github.io/docs-kits/kits/data-trust-and-security-kit/changelog#001)  | [#1495](https://github.com/eclipse-tractusx/sig-release/issues/1495) |
-| [Requirement KIT](https://eclipse-tractusx.github.io/docs-kits/category/requirements-kit)                   |      n/a       | [0.1.0](https://eclipse-tractusx.github.io/docs-kits/kits/requirements-kit/changelog#010---2025-09-29) |                                                                  |
+| [Requirement KIT](https://eclipse-tractusx.github.io/docs-kits/category/requirements-kit)                   |      n/a       | [0.1.0](https://eclipse-tractusx.github.io/docs-kits/kits/requirements-kit/changelog#010---2025-09-29) |                                                                      |
 
 #### Updated
 
@@ -147,8 +147,8 @@ Most of the features are linked to product specific issues. Please have a look o
 
 :::
 
-| Component                                                                                                                                         |                                                                                             Helm Chart (s)                                                                                              |                                                                                                                                                                                        App-/KIT Version (s)                                                                                                                                                                                        | Release Check                                                        |
-|:--------------------------------------------------------------------------------------------------------------------------------------------------|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|----------------------------------------------------------------------|
+| Component                                                                                                                                         |                                                                                             Helm Chart (s)                                                                                              |                                                                                                                                                                                        App-/KIT Version (s)                                                                                                                                                                                        |                            Release Check                             |
+|:--------------------------------------------------------------------------------------------------------------------------------------------------|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|:--------------------------------------------------------------------:|
 | [Business Partner KIT](https://eclipse-tractusx.github.io/docs-kits/category/business-partner-kit)                                                |                                                                                                   n/a                                                                                                   |                                                                                                                                            [10.0.0](https://eclipse-tractusx.github.io/docs-kits/kits/business-partner-kit/changelog#1000---2025-09-08)                                                                                                                                            | [#1487](https://github.com/eclipse-tractusx/sig-release/issues/1487) |
 | [BPN DID Resolution Service (BDRS)](https://github.com/eclipse-tractusx/bpn-did-resolution-service)                                               |                                                    bdrs: [0.5.7](https://github.com/eclipse-tractusx/bpn-did-resolution-service/releases/tag/0.5.7)                                                     |                                                                                                                                                     [0.5.7](https://github.com/eclipse-tractusx/bpn-did-resolution-service/releases/tag/0.5.7)                                                                                                                                                     | [#1454](https://github.com/eclipse-tractusx/sig-release/issues/1454) |
 | [Demand and Capacity Management KIT](https://eclipse-tractusx.github.io/docs-kits/kits/demand-and-capacity-management-kit/adoption-view/overview) |                                                                                                   n/a                                                                                                   |                                                                                                                                      [1.4.0](https://eclipse-tractusx.github.io/docs-kits/kits/demand-and-capacity-management-kit/changelog#140---2025-09-29)                                                                                                                                      | [#1264](https://github.com/eclipse-tractusx/sig-release/issues/1264) |
@@ -176,8 +176,8 @@ Most of the features are linked to product specific issues. Please have a look o
 #### BPDM
 
 - When creating a marketplace app the Portal does not support an internal technical user profile for BPDM permission group [Gate Input Consumer](https://github.com/eclipse-tractusx/bpdm/blob/main/docs/architecture/08_Crosscutting_Concepts.md). Therefore, it is currently not possible to create a marketplace app that enables access to [ReadAccessGateInputForSharingMember offers](https://github.com/eclipse-tractusx/bpdm/blob/main/INSTALL.md#edc-installation) for external VAT services wanting to access sharing member Gates
-- For the new Tractus-X Connector 0.11 the golden record process was only tested on the 3rd release candidate, not the actual released version. There were no backwards compatibility tests between older Tractus-X Connector versions and the new Tractus-X Connector 0.11.
-- BPDM currently only offers documentation on how to use the Tractus-X Connector 0.11 over DCP 1.0. There are no tutorials for DCP 0.8 available.
+- For the new Tractus-X Connector `0.11` the golden record process was only tested on the 3rd release candidate, not the actual released version. There were no backwards compatibility tests between older Tractus-X Connector versions and the new Tractus-X Connector `0.11`.
+- BPDM currently only offers documentation on how to use the Tractus-X Connector `0.11` over DCP 1.0. There are no tutorials for DCP 0.8 available.
 
 #### Tractus-X Connector
 
@@ -192,7 +192,7 @@ Most of the features are linked to product specific issues. Please have a look o
 - RLock is blocking other API calls when negotiation is not successful at the Discovery: [industry-core-hub#334](https://github.com/eclipse-tractusx/industry-core-hub/issues/334)
 - Trivy scan fails to complete successfully because of alpine version:  [industry-core-hub#319](https://github.com/eclipse-tractusx/industry-core-hub/issues/319)
 - When the Tractus-X Connector restarts, the Connector assets are not recreated for the already available twins: [industry-core-hub#318](https://github.com/eclipse-tractusx/industry-core-hub/issues/318)
-- **Incompatible with Tractus-X Connector `0.11.x:` (additional)**
+- **Incompatible with Tractus-X Connector `0.11.x`: (additional)**
   - Not compliant to CX-0018, due to **NOT** evaluating the dspace endpoint.
   - Not compliant to CX-0152, due to **NOT** implementing the new odrl profile.
 - No authentication is implemented (it will be included in R25.12, PR is ready): [industry-core-hub#254](https://github.com/eclipse-tractusx/industry-core-hub/issues/254)
@@ -202,14 +202,14 @@ Most of the features are linked to product specific issues. Please have a look o
 - Data Assets and DTR not covered in migrations
 - Data Sovereignty is not transparent to end-users
 - Catalog and Negotiations have bad user experience (no actions, no filters)
-- **Incompatible with Tractus-X Connector `0.11.x:` (additional)**
+- **Incompatible with Tractus-X Connector `0.11.x`: (additional)**
   - Not tested with Tractus-X Connector in version `0.11.x`
   - Not compliant to CX-0018, due to **NOT** evaluating the dspace endpoint.
   - Not compliant to CX-0152, due to **NOT** implementing the new odrl profile.
 
 #### Tractus-X SDK
 
-- Compatibility with Tractus-X Connector 0.11.x (Saturn) not tested completely: [tractusx-sdk#159](https://github.com/eclipse-tractusx/tractusx-sdk/issues/159)
+- Compatibility with Tractus-X Connector `0.11.x` (Saturn) not tested completely: [tractusx-sdk#159](https://github.com/eclipse-tractusx/tractusx-sdk/issues/159)
   - The Saturn APIs were implemented but were not able to be tested because of different bugs found at the connector and due to missing documentation on how to adopt it.
 
 ### Runtime
@@ -264,5 +264,11 @@ postgresql:
 :::tip
 
 For installation details, please see the referenced Repositories / Releases and related documentation (e.g. migration documentation)
+
+:::
+
+:::note
+
+In case you have any questions about the release, please reach out to the Eclipse Tractus-X community, via [Eclipse Matrix Channel](https://matrix.to/#/#automotive.tractusx:matrix.eclipse.org) and/or the [Release Management](https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org) room. 
 
 :::
