add release planning information for 26.03

--- a/community/open-meetings.mdx
+++ b/community/open-meetings.mdx
@@ -21,11 +21,11 @@ All the times are shown in:
              contact="stephan.bauer@catena-x.net"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_MDFiNDJjMmQtNjFkYi00ODdjLTk2NDgtZGMwNTRmYzg3NzM0%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d"
              additionalLinks={
-                [
-                    {title: 'Taskboard', url: 'https://github.com/orgs/eclipse-tractusx/projects/61/views/1'},
-                    {title: 'Meeting minutes', url: '/community/meeting-minutes/tags/community'},
-                    {title: 'Timelines', url: 'https://github.com/orgs/eclipse-tractusx/projects/26/views/35'},
-                ]
+               [
+                 {title: 'Taskboard', url: 'https://github.com/orgs/eclipse-tractusx/projects/61/views/1'},
+                 {title: 'Meeting minutes', url: '/community/meeting-minutes/tags/community'},
+                 {title: 'Timelines', url: 'https://github.com/orgs/eclipse-tractusx/projects/26/views/35'},
+               ]
              }
 />
 
@@ -42,10 +42,10 @@ All the times are shown in:
              contact="stephan.bauer@catena-x.net"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZjlmNTc5MjMtN2Y2YS00YjliLTg3NTItNWE1MmMzMWUzNmYw%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d"
              additionalLinks={
-                [
-                    {title: 'Taskboard', url: 'https://github.com/orgs/eclipse-tractusx/projects/61/views/6'},
-                    {title: 'Timelines', url: 'https://github.com/orgs/eclipse-tractusx/projects/26/views/35'},
-                ]
+               [
+                 {title: 'Taskboard', url: 'https://github.com/orgs/eclipse-tractusx/projects/61/views/6'},
+                 {title: 'Timelines', url: 'https://github.com/orgs/eclipse-tractusx/projects/26/views/35'},
+               ]
              }
 />
 
@@ -57,15 +57,27 @@ All the times are shown in:
              contact="mathias.moser@catena-x.net"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_MGJlYzgzMjktNWE4OS00NjcwLWIyOGYtZDgzYmMzODRiMTgy%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%2279a55f91-092d-4603-8fa9-c88b54ff2fe9%22%7d"
              additionalLinks={
-                [
-                    {title: 'Industry Core Hub Matrix Chat', url: 'https://matrix.to/#/#tractusx-industry-core-hub:matrix.eclipse.org'},
-                    {title: 'industry-core-hub Repository', url: 'https://github.com/eclipse-tractusx/industry-core-hub'},
-                    {title: 'tractusx-sdk Repository', url: 'https://github.com/eclipse-tractusx/tractusx-sdk'},
-                    {title: 'Planning Board Project', url: 'https://github.com/orgs/eclipse-tractusx/projects/83'},
-                    {title: 'Backend & TX-SDK Weekly - Monday 10:00 am to 10:30 am', url: 'https://teams.microsoft.com/l/meetup-join/19%3ameeting_ODU0ZDk3MjUtNjkzMS00MzQzLWFmZGYtY2Q3YWEzZmVjNmMx%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%2279a55f91-092d-4603-8fa9-c88b54ff2fe9%22%7d'},
-                    {title: 'Frontend Weekly - Tuesday 02:00 pm to 02:30 pm', url: 'https://teams.microsoft.com/l/meetup-join/19%3ameeting_ODUyNWQxMzAtMWE0ZC00Mjc2LTgzYzAtNTc0ZGFiZDllNmQy%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%2279a55f91-092d-4603-8fa9-c88b54ff2fe9%22%7d'},
-                    {title: 'Architecture Weekly - Thursday 01:00 pm to 02:00 pm', url: 'https://teams.microsoft.com/l/meetup-join/19%3ameeting_YzYyMDUyZjMtMmFlMy00ODMyLWFlZDQtNjMwYWZhOTc3YTVh%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%2279a55f91-092d-4603-8fa9-c88b54ff2fe9%22%7d'}
-                ]
+               [
+                 {
+                   title: 'Industry Core Hub Matrix Chat',
+                   url: 'https://matrix.to/#/#tractusx-industry-core-hub:matrix.eclipse.org'
+                 },
+                 {title: 'industry-core-hub Repository', url: 'https://github.com/eclipse-tractusx/industry-core-hub'},
+                 {title: 'tractusx-sdk Repository', url: 'https://github.com/eclipse-tractusx/tractusx-sdk'},
+                 {title: 'Planning Board Project', url: 'https://github.com/orgs/eclipse-tractusx/projects/83'},
+                 {
+                   title: 'Backend & TX-SDK Weekly - Monday 10:00 am to 10:30 am',
+                   url: 'https://teams.microsoft.com/l/meetup-join/19%3ameeting_ODU0ZDk3MjUtNjkzMS00MzQzLWFmZGYtY2Q3YWEzZmVjNmMx%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%2279a55f91-092d-4603-8fa9-c88b54ff2fe9%22%7d'
+                 },
+                 {
+                   title: 'Frontend Weekly - Tuesday 02:00 pm to 02:30 pm',
+                   url: 'https://teams.microsoft.com/l/meetup-join/19%3ameeting_ODUyNWQxMzAtMWE0ZC00Mjc2LTgzYzAtNTc0ZGFiZDllNmQy%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%2279a55f91-092d-4603-8fa9-c88b54ff2fe9%22%7d'
+                 },
+                 {
+                   title: 'Architecture Weekly - Thursday 01:00 pm to 02:00 pm',
+                   url: 'https://teams.microsoft.com/l/meetup-join/19%3ameeting_YzYyMDUyZjMtMmFlMy00ODMyLWFlZDQtNjMwYWZhOTc3YTVh%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%2279a55f91-092d-4603-8fa9-c88b54ff2fe9%22%7d'
+                 }
+               ]
              }
 />
 
@@ -82,11 +94,17 @@ All the times are shown in:
              contact="mathias.moser@catena-x.net"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_NTIxMmIyMmItYTk0NC00YjMxLWFiNDAtOTRlOWM1ZDUxYWRm%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%2279a55f91-092d-4603-8fa9-c88b54ff2fe9%22%7d"
              additionalLinks={
-                [
-                    {title: 'Identity Hub Matrix Chat', url: 'https://matrix.eecc.de/#/room/#tractusx-identity-hub:matrix.eclipse.org'},
-                    {title: 'tractusx-identityhub Repository', url: 'https://github.com/eclipse-tractusx/tractusx-identityhub'},
-                    {title: 'Planning Board', url: 'https://github.com/orgs/eclipse-tractusx/projects/87/views/1'},
-                ]
+               [
+                 {
+                   title: 'Identity Hub Matrix Chat',
+                   url: 'https://matrix.eecc.de/#/room/#tractusx-identity-hub:matrix.eclipse.org'
+                 },
+                 {
+                   title: 'tractusx-identityhub Repository',
+                   url: 'https://github.com/eclipse-tractusx/tractusx-identityhub'
+                 },
+                 {title: 'Planning Board', url: 'https://github.com/orgs/eclipse-tractusx/projects/87/views/1'},
+               ]
              }
 />
 
@@ -96,10 +114,13 @@ All the times are shown in:
              contact="saad.rafiq@cofinity-x.com"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_YmIyYjgwOTQtZjI1Ny00YmM0LTlmOWQtODRjZWFmZWM1Y2E3%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d"
              additionalLinks={
-                [
-                    {title: 'Portal Matrix Chat', url: 'https://chat.eclipse.org/#/room/#tractusx-portal:matrix.eclipse.org'},
-                    {title: 'Feature Board', url: 'https://github.com/orgs/eclipse-tractusx/projects/50/views/25'},
-                ]
+               [
+                 {
+                   title: 'Portal Matrix Chat',
+                   url: 'https://chat.eclipse.org/#/room/#tractusx-portal:matrix.eclipse.org'
+                 },
+                 {title: 'Feature Board', url: 'https://github.com/orgs/eclipse-tractusx/projects/50/views/25'},
+               ]
              }
 />
 
@@ -109,10 +130,13 @@ All the times are shown in:
              contact="mgarcia@lksnext.com"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19:meeting_ODMzMzMxY2MtMGI4ZC00MjJkLThjZjYtMzk3ZjBjMmEzYjZj@thread.v2/0?context=%7B%22Tid%22:%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22,%22Oid%22:%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7D"
              additionalLinks={
-                [
-                    {title: 'Umbrella Repository', url: 'https://github.com/eclipse-tractusx/tractus-x-umbrella'},
-                    {title: 'Umbrella Matrix Chat', url: 'https://chat.eclipse.org/#/room/#tractusx-umbrella-chart:matrix.eclipse.org'},
-                ]
+               [
+                 {title: 'Umbrella Repository', url: 'https://github.com/eclipse-tractusx/tractus-x-umbrella'},
+                 {
+                   title: 'Umbrella Matrix Chat',
+                   url: 'https://chat.eclipse.org/#/room/#tractusx-umbrella-chart:matrix.eclipse.org'
+                 },
+               ]
              }
 />
 
@@ -122,9 +146,9 @@ All the times are shown in:
              contact="sujit.karne@mercedes-benz.com"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_OGYxZjQ4NzItNjc1OC00YjEyLWI2NjYtNThjNDBmMGI0MTk4%40thread.v2/0?context=%7b%22Tid%22%3a%229652d7c2-1ccf-4940-8151-4a92bd474ed0%22%2c%22Oid%22%3a%221cad1acb-7d7b-4e88-bc6b-875078a66bdf%22%7d"
              additionalLinks={
-                [
-                    {title: 'BPDM Matrix Chat', url: 'https://chat.eclipse.org/#/room/#tractusx-bpdm:matrix.eclipse.org'},
-                ]
+               [
+                 {title: 'BPDM Matrix Chat', url: 'https://chat.eclipse.org/#/room/#tractusx-bpdm:matrix.eclipse.org'},
+               ]
              }
 />
 
@@ -134,42 +158,66 @@ All the times are shown in:
              contact="johann.schuetz@catena-x.net"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_N2I5MjM1NzUtZmFmZS00MTI2LTgyMmEtOGZiMDMxNmRlYTA4%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22bf6c04e8-bde4-4ca1-ac15-0f85f440ab48%22%7d"
              additionalLinks={
-                [
-                    {title: 'SLDT Semantic Models Repository', url: 'https://github.com/eclipse-tractusx/sldt-semantic-models'},
-                    {title: 'SLDT Ontology Models Repository', url: 'https://github.com/eclipse-tractusx/sldt-ontology-model'}
-                ]
+               [
+                 {
+                   title: 'SLDT Semantic Models Repository',
+                   url: 'https://github.com/eclipse-tractusx/sldt-semantic-models'
+                 },
+                 {
+                   title: 'SLDT Ontology Models Repository',
+                   url: 'https://github.com/eclipse-tractusx/sldt-ontology-model'
+                 }
+               ]
              }
 />
 
 ## One-time meetings
 
-<MeetingInfo title="Alignment Day for R25.12"
-             schedule="Thursday, 31. July 2025 from 09:05 AM to 12:00 AM"
-             description="Based on a predefined agenda (depending on the features on the board with label Open Question), individual dependencies are discussed and also documented directly on the feature.."
+<MeetingInfo title="Alignment Day for R26.03"
+             schedule="Thursday, 30. October 2025 from 09:05 AM to 10:45 AM"
+             description="Based on a predefined agenda (depending on the features on the board with label Open Question), individual dependencies are discussed and also documented directly on the feature."
              contact="stephan.bauer@catena-x.net"
-             sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_ODg5N2NlY2QtNzc2My00ZGJkLWIxNzMtNTFmZGQwZTc2NzU2%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22c4f4cd17-5452-4057-9b00-42444990d814%22%7d"
+             sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZWUzMmU2ODktMTU0OS00MjM5LTk0MDYtM2UxYmI5OTE1ZDE5%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22c4f4cd17-5452-4057-9b00-42444990d814%22%7d"
              additionalLinks={
-                 [
-                     {title: "Release Planning Board - Open Question", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/40?filterQuery=-label%3Ametadata+label%3APrep-R25.12+label%3A%22open+question%22"},
-                     {title: "Timeline", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A%2225.12%22"},
-                     {title: "News Blog", url: "/blog/release-planning-R25.12"},
-                     {title: "Release Planning Matrix Chat", url: "https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org"}
-                 ]
+               [
+                 {
+                   title: "Release Planning Board - Open Question",
+                   url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/43?filterQuery=-label%3Ametadata+label%3APrep-R26.03+label%3A%22open+question%22"
+                 },
+                 {
+                   title: "Timeline",
+                   url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A26.03"
+                 },
+                 {title: "News Blog", url: "/blog/release-planning-R26.03"},
+                 {
+                   title: "Release Planning Matrix Chat",
+                   url: "https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org"
+                 }
+               ]
              }
 />
 
-<MeetingInfo title="Open Planning for R25.12"
-             schedule="Thursday, 14. August 2025 from 09:05 AM to 02:30 PM"
+<MeetingInfo title="Open Planning for R26.03"
+             schedule="Thursday, 13. November 2025 from 09:05 AM to 12:15 PM"
              description="The goal for this meeting is planning of the intended work content for the next release - which contains also preparation of future release content, refactoring, general architectural work, tool & process improvements, and feature planning for the next Tractus-X release."
              contact="stephan.bauer@catena-x.net"
-             sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_Y2YwYjBlYWQtY2JmNy00YjkxLWFjNTktZTJiM2ZlYmIzNGQ1%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22c4f4cd17-5452-4057-9b00-42444990d814%22%7d"
+             sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_MjM4YTAwYWItMWU0Ny00NzU5LWFlZmYtYWRkZGQyMWRlMTM2%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22c4f4cd17-5452-4057-9b00-42444990d814%22%7d"
              additionalLinks={
-                 [
-                     {title: "Release Planning Board - Topic/Product", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/28?filterQuery=-status%3ADone+has%3Atopic%2Fproduct+label%3A%22Prep-R25.12%22+status%3ABacklog"},
-                     {title: "Timeline", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A%2225.12%22"},
-                     {title: "News Blog", url: "/blog/release-planning-R25.12"},
-                     {title: "Detailed Agenda", url: "/blog/release-planning-R25.12#agenda-1"},
-                     {title: "Release Planning Matrix Chat", url: "https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org"}
-                 ]
+               [
+                 {
+                   title: "Release Planning Board - Topic/Product",
+                   url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/28?filterQuery=-status%3ADone+has%3Atopic%2Fproduct+label%3A%22Prep-R26.03%22+status%3ABacklog"
+                 },
+                 {
+                   title: "Timeline",
+                   url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A26.03"
+                 },
+                 {title: "News Blog", url: "/blog/release-planning-R26.03"},
+                 {title: "Detailed Agenda", url: "/blog/release-planning-R26.03#agenda-1"},
+                 {
+                   title: "Release Planning Matrix Chat",
+                   url: "https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org"
+                 }
+               ]
              }
 />
