Apply suggestion from @stephanbcbauer

--- a/blog/2025-10-20-testphase-R25.12.md
+++ b/blog/2025-10-20-testphase-R25.12.md
@@ -11,7 +11,7 @@ authors:
 
 Hello Eclipse Tractus‑X community,
 
-We are about to start the test phase for Release 25.12. Below you'll find the key meetings and quick facts — visit the [Open Meetings page](/community/open-meetings) for session links, agendas, and additional resources.
+We are about to start the test phase (**03.11.2025 - 21.11.2025**) for Release 25.12. Below you'll find the key meetings and quick facts — visit the [Open Meetings page](/community/open-meetings) for session links, agendas, and additional resources.
 
 ## Key meetings
 
