Apply suggestion from @stephanbcbauer

--- a/community/open-meetings.mdx
+++ b/community/open-meetings.mdx
@@ -175,7 +175,7 @@ All the times are shown in:
 
 <MeetingInfo title="Eclipse Tractus-X E2E Test Phase Daily for R25.12"
              schedule="Occurs every weekday effective 4. Nov 2025 until 21. Nov 2025 from 08:30 AM to 09:00 AM"
-             description="Onboarding and deployment status for 25.12 on INT environment,\nDefect/Blocker updates,\nTest status of all participating products"
+             description="Onboarding and deployment status for 25.12 on INT environment, Defect/Blocker updates, Test status of all participating products"
              contact="monika.jacobsen@catena-x.net"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_NjQ1ZjI5NDctMmQ2OC00OWRhLTg5NzUtOWJjNzQ1M2MxZDNj%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22e461a1fa-5342-44e3-b2e8-32b399a9e867%22%7d"
              additionalLinks={
