update suggested text
Co-authored-by: Birgit Boss <59824205+BirgitBoss@users.noreply.github.com>

--- a/docs-kits/kits/industry-core-kit/software-development-view/digital-twins.mdx
+++ b/docs-kits/kits/industry-core-kit/software-development-view/digital-twins.mdx
@@ -429,7 +429,7 @@ A sample payload for BinaryExchange aspect model is described below:
 
 ### Lookup in the Digital Twin Registry
 
-For a data provider following steps are currently required when they have to lookup digital twins of other partners in the Catena-X network.
+For a data provider the following steps are currently required when they have to lookup digital twins of other partners in the Catena-X network.
 
 - The data provider must use the local IDs for a serialized part or batch (manufacturer, part number, serial or batch number) and for a just-in-sequence part (manufacturer, parentOrderNumber, jisNumber, jisCallDate) to lookup the AAS ID of the digital twin of this serialized part, batch or just-in-sequence part. The AAS descriptor with this ID contains the Unique ID of the serialized part, batch or just-in-sequence (as globalAssetId) that is used to create SingleLevelBomAsBuilt submodel.
 
