--- a/docs/release/trg-5/trg-5-05.md
+++ b/docs/release/trg-5/trg-5-05.md
@@ -4,7 +4,7 @@ title: TRG 5.05 - Chart Values
 
 | Status | Created     | Post-History           |
 | ------ | ----------- | ---------------------- |
-| Update | 28-Oct-2025 | Add Cloudpirates       |
+| Update | 28-Oct-2025 | Migrate from Bitnami to Cloudpirates       |
 | Update | 29-Feb-2024 | new examples and rules |
 | Active | 10-Nov-2022 | Initial release        |
 
