Migrate from Bitnami to Cloudpirates in trg-5-07.md
Updated post-history entry and changed alias for PostgreSQL dependency.

--- a/docs/release/trg-5/trg-5-07.md
+++ b/docs/release/trg-5/trg-5-07.md
@@ -4,7 +4,7 @@ title: TRG 5.07 - Chart Dependencies
 
 | Status | Created     | Post-History              |
 |--------|-------------|---------------------------|
-| Update | 28-Oct-2023 | Add Cloudpirates          |
+| Update | 28-Oct-2023 | Migrate from Bitnami to Cloudpirates          |
 | Update | 20-Sep-2023 | Adjust PostgreSQL version |
 | Active | 07-Mar-2023 |                           |
 | Draft  | 02-Dec-2022 | n/a                       |
@@ -27,7 +27,7 @@ dependencies:
     repository: oci://registry-1.docker.io/cloudpirates
     version: 0.11.x
     condition: postgresql.enabled
-    alias: postgresql
+    alias: product-name-postgresql
 ```
 
 - Usage of condition, alias and version properties are optional but highly recommended
